# libtorch_faceboxes

./: CMakeLists.txt  LICENSE  README.md  data.txt  faceboxes.pt  prediction.cpp
